fix: Sprint6 Base 코드에 맞춰 수정